Quiz1/2016-2017 quiz1/Q4/Assignment/submissions/2012111111/error.txt
assign.cpp: In function ‘int main()’:
assign.cpp:8:1: error: expected ‘;’ before ‘}’ token
 }
 ^
